# one-track-rnd

./: Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
ot-server/: .env.example  Cargo.toml
ot-server/src/: lib.rs  main.rs  use serde::{Deserialize, Serialize};.rs
ot-server/src/config/: database.rs  env.rs
ot-server/src/dtos/: mod.rs  project_dto.rs  section_dto.rs  sub_task_dto.rs  task_dto.rs
ot-server/src/entities/: activity_data.rs  mod.rs  prelude.rs  project.rs  section.rs  sub_task.rs  task.rs  window_activity_data.rs
ot-server/src/handlers/: mod.rs  project_handlers.rs  section_handlers.rs  sub_task_handlers.rs  task_handlers.rs
ot-server/src/integrations/: mod.rs
ot-server/src/migrator/: m20220101_000000_create_uuid_extension.rs  m20220101_000001_create_activity_data_table.rs  m20220101_000002_create_window_activity_data_table.rs  m20220101_000003_create_project_table.rs  m20220101_000004_create_section_table.rs  m20220101_000005_create_task_table.rs  m20220101_000006_create_sub_task_table.rs  mod.rs
ot-server/src/repository/: mod.rs  project_repository.rs  section_repository.rs  sub_task_repository.rs  task_repository.rs
ot-server/src/routes/: mod.rs  project_route.rs  section_route.rs  sub_task_route.rs  task_route.rs
ot-server/src/services/: mod.rs  project_service.rs  section_service.rs  sub_task_service.rs  task_service.rs
ot-server/src/utils/: error.rs
src/: App copy.tsx  App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: keyboard_mouse_activity.rs  lib.rs  main.rs  screenshot.rs  state.rs  task_timer.rs  time_tracker.rs  track_activity.rs
src-tauri/src/backup/: screenshot.rs
src-tauri/src/cmd/: mod.rs  project_command.rs  section_command.rs  sub_task_command.rs  task_command.rs
src-tauri/src/services/: mod.rs  (+4 more)
src/components/: ActivityTracker.css  ActivityTracker.tsx  TrackerContainer.tsx
src/types/: index.ts
src/utils/: formatDate.ts  formatTime.ts
(+7 files in other folders)
