[package]
name = "ot-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8", features = ["tracing"]}
futures = "0.3.31"
sea-orm = {version="1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros","postgres-array","with-uuid", "with-time", "with-chrono", "debug-print"]}
sea-orm-migration = "1.1.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# thiserror = "2"
tokio = { version = "1.43.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace"] }
anyhow = "1.0.95"
dotenv = "0.15.0"
reqwest = "0.12.12"
thiserror = "2.0.11"
async-trait = "0.1.86"
axum-valid = "0.22.0"
time = "0.3.37"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# validator = { version = "0.20.0"}